<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WorkItemsActivity" 
    android:columnCount="3"
    android:orientation="vertical"
    android:horizontalSpacing="20dp"
    android:background="#000000"
    
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:text="@string/Status_Activity_Top_Text"
        android:textColor="#00ffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/IterationPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnSpan="3"
        android:textColor="#ffffff"
        />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnSpan="3"
         android:layout_row="2"
         android:text="@string/WorkItem_Text"
         android:textColor="#ffff00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/WorkItem_Type"
        android:textColor="#90ee90"
        android:width="125dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/WorkItem_Active"
        android:textColor="#90ee90"
        android:width="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/WorkItem_Closed"
        android:textColor="#90ee90" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="0"
	    android:layout_row="4"
	    android:text="@string/WorkItem_Requirements"
	    android:width="125dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/WorkItem_Tasks"
        android:width="125dp" 
        android:textColor="#ffffff"/>

	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/WorkItem_Bugs"
        android:width="125dp"
        android:textColor="#ffffff" />
    <TextView
	    android:id="@+id/T42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:textColor="#66d6ff"
        android:width="75dp" />
	<TextView
	    android:id="@+id/T43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="4"
        android:textColor="#66d6ff"
        android:width="75dp" />
    <TextView
	    android:id="@+id/T52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:textColor="#66d6ff"
        android:width="75dp" />
	<TextView
	    android:id="@+id/T53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="5"
        android:textColor="#66d6ff"
        android:width="75dp" />
    <TextView
	    android:id="@+id/T62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        android:textColor="#66d6ff"
        android:width="75dp" />
	<TextView
	    android:id="@+id/T63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="6"
        android:textColor="#66d6ff"
        android:width="75dp" />
    
</GridLayout>