<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:horizontalSpacing="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|bottom"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/connect_prompt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:gravity="left"
        android:text="EndPoint:"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/endPoint"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="1"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:text="@string/tfsodata_connection"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:gravity="left"
        android:text="Domain:"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/Domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:gravity="left"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:text="SSGSOnline"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:gravity="left"
        android:text="User Name:"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/UName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:gravity="left"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:gravity="left"
        android:text="Password:"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:gravity="left"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:gravity="center"
        android:onClick="Button1_Click"
        android:text="@string/button_send" />

    <ListView
        android:id="@+id/prjlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="6" >
    </ListView>

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

</GridLayout>